external-crates/move/crates/move-compiler/tests/move_check/parser/phantom_param_missing_type_var.exp
warning[W09006]: unused struct type parameter
  ┌─ tests/move_check/parser/phantom_param_missing_type_var.move:2:14
  │
2 │     struct S<T1, phantom> {
  │              ^^ Unused type parameter 'T1'. Consider declaring it as phantom
  │
  = This warning can be suppressed with '#[allow(unused_type_parameter)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/phantom_param_missing_type_var.move:2:25
  │
2 │     struct S<T1, phantom> {
  │                         ^
  │                         │
  │                         Unexpected '>'
  │                         Expected an identifier

