external-crates/move/crates/move-compiler/tests/move_check/parser/phantom_param_missing_type_var.move
module 0x42::M {
    struct S<T1, phantom> {
        f1: u64
    }
}
